5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1671_1105.log
== TEST (2019-04-18 14:28:55) 
-- CODE:
# Entrada
B = input("Brasao: ")
print("Entrada: ", B)
# Condicoes
if (B == "lobo"):
	print("Casa: Stark")
elif (B == "leao"):
	print("Casa: Lannister")
elif (B == "veado"):
	print("Baratheon")
elif (B == "dragao"):
	print("Targaryen")
elif (B == "rosa"):
	print("Casa: Tyrell")
elif (B == "sol"):
	print("Casa: Martell")
elif (B = "lula"):
	print("Casa: Greyjoy")
elif (B == "esfolado"):
	print("Casa: Bolton")
elif (B == "turta"):
	print("Casa: Tully")
elif ()
-- ERROR:
File "XXXX", line 17
    elif (B = "lula"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:29:09) 
-- CODE:
# Entrada
B = input("Brasao: ")
print("Entrada: ", B)
# Condicoes
if (B == "lobo"):
	print("Casa: Stark")
elif (B == "leao"):
	print("Casa: Lannister")
elif (B == "veado"):
	print("Baratheon")
elif (B == "dragao"):
	print("Targaryen")
elif (B == "rosa"):
	print("Casa: Tyrell")
elif (B == "sol"):
	print("Casa: Martell")
elif (B == "lula"):
	print("Casa: Greyjoy")
elif (B == "esfolado"):
	print("Casa: Bolton")
elif (B == "turta"):
	print("Casa: Tully")
elif ()
-- ERROR:
File "XXXX", line 23
    elif ()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:29:16) 
-- CODE:
# Entrada
B = input("Brasao: ")
print("Entrada: ", B)
# Condicoes
if (B == "lobo"):
	print("Casa: Stark")
elif (B == "leao"):
	print("Casa: Lannister")
elif (B == "veado"):
	print("Baratheon")
elif (B == "dragao"):
	print("Targaryen")
elif (B == "rosa"):
	print("Casa: Tyrell")
elif (B == "sol"):
	print("Casa: Martell")
elif (B == "lula"):
	print("Casa: Greyjoy")
elif (B == "esfolado"):
	print("Casa: Bolton")
elif (B == "turta"):
	print("Casa: Tully")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:32:46) 
-- CODE:
# Entrada
B = input("Brasao: ")
print("Entrada: ", B)
# Condicoes
if (B == "lobo"):
	print("Casa: Stark")
elif (B == "leao"):
	print("Casa: Lannister")
elif (B == "veado"):
	print("Baratheon")
elif (B == "dragao"):
	print("Targaryen")
elif (B == "rosa"):
	print("Casa: Tyrell")
elif (B == "sol"):
	print("Casa: Martell")
elif (B == "lula"):
	print("Casa: Greyjoy")
elif (B == "esfolado"):
	print("Casa: Bolton")
elif (B == "turta"):
	print("Casa: Tully")
elif (B != "lobo") or (B != "leao") or (B != "veado") or (B != "dragao") or (B != "rosa") or (B != "lula") or (B != "esfolado") or (B != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 14:32:54) 
-- CODE:
# Entrada
B = input("Brasao: ")
print("Entrada: ", B)
# Condicoes
if (B == "lobo"):
	print("Casa: Stark")
elif (B == "leao"):
	print("Casa: Lannister")
elif (B == "veado"):
	print("Baratheon")
elif (B == "dragao"):
	print("Targaryen")
elif (B == "rosa"):
	print("Casa: Tyrell")
elif (B == "sol"):
	print("Casa: Martell")
elif (B == "lula"):
	print("Casa: Greyjoy")
elif (B == "esfolado"):
	print("Casa: Bolton")
elif (B == "turta"):
	print("Casa: Tully")
elif (B != "lobo") or (B != "leao") or (B != "veado") or (B != "dragao") or (B != "rosa") or (B != "lula") or (B != "esfolado") or (B != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.130008
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:33:18) 
-- CODE:
# Entrada
B = input("Brasao: ")
print("Entrada: ", B)
# Condicoes
if (B == "lobo"):
	print("Casa: Stark")
elif (B == "leao"):
	print("Casa: Lannister")
elif (B == "veado"):
	print("Baratheon")
elif (B == "dragao"):
	print("Targaryen")
elif (B == "rosa"):
	print("Casa: Tyrell")
elif (B == "sol"):
	print("Casa: Martell")
elif (B == "lula"):
	print("Casa: Greyjoy")
elif (B == "esfolado"):
	print("Casa: Bolton")
elif (B == "turta"):
	print("Casa: Tully")
elif (B != "lobo") or (B != "leao") or (B != "veado") or (B != "dragao") or (B != "rosa") or (B != "lula") or (B != "esfolado") or (B != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:33:24) 
-- CODE:
# Entrada
B = input("Brasao: ")
print("Entrada: ", B)
# Condicoes
if (B == "lobo"):
	print("Casa: Stark")
elif (B == "leao"):
	print("Casa: Lannister")
elif (B == "veado"):
	print("Baratheon")
elif (B == "dragao"):
	print("Targaryen")
elif (B == "rosa"):
	print("Casa: Tyrell")
elif (B == "sol"):
	print("Casa: Martell")
elif (B == "lula"):
	print("Casa: Greyjoy")
elif (B == "esfolado"):
	print("Casa: Bolton")
elif (B == "turta"):
	print("Casa: Tully")
elif (B != "lobo") or (B != "leao") or (B != "veado") or (B != "dragao") or (B != "rosa") or (B != "lula") or (B != "esfolado") or (B != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 14:33:31) 
-- CODE:
# Entrada
B = input("Brasao: ")
print("Entrada: ", B)
# Condicoes
if (B == "lobo"):
	print("Casa: Stark")
elif (B == "leao"):
	print("Casa: Lannister")
elif (B == "veado"):
	print("Baratheon")
elif (B == "dragao"):
	print("Targaryen")
elif (B == "rosa"):
	print("Casa: Tyrell")
elif (B == "sol"):
	print("Casa: Martell")
elif (B == "lula"):
	print("Casa: Greyjoy")
elif (B == "esfolado"):
	print("Casa: Bolton")
elif (B == "turta"):
	print("Casa: Tully")
elif (B != "lobo") or (B != "leao") or (B != "veado") or (B != "dragao") or (B != "rosa") or (B != "lula") or (B != "esfolado") or (B != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 14:34:02) 
-- CODE:
# Entrada
B = input("Brasao: ")
print("Entrada: ", B)
# Condicoes
if (B == "lobo"):
	print("Casa: Stark")
elif (B == "leao"):
	print("Casa: Lannister")
elif (B == "veado"):
	print("Casa: Baratheon")
elif (B == "dragao"):
	print("Casa: Targaryen")
elif (B == "rosa"):
	print("Casa: Tyrell")
elif (B == "sol"):
	print("Casa: Martell")
elif (B == "lula"):
	print("Casa: Greyjoy")
elif (B == "esfolado"):
	print("Casa: Bolton")
elif (B == "turta"):
	print("Casa: Tully")
elif (B != "lobo") or (B != "leao") or (B != "veado") or (B != "dragao") or (B != "rosa") or (B != "lula") or (B != "esfolado") or (B != "turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.138112
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:13:44) 
-- CODE:
# Entrada
B = input("Brasao: ")
print("Entrada: ", B)
# Condicoes
if (B == "lobo"):
	print("Casa: Stark")
elif (B == "leao"):
	print("Casa: Lannister")
elif (B == "veado"):
	print("Casa: Baratheon")
elif (B == "dragao"):
	print("Casa: Targaryen")
elif (B == "rosa"):
	print("Casa: Tyrell")
elif (B == "sol"):
	print("Casa: Martell")
elif (B == "lula"):
	print("Casa: Greyjoy")
elif (B == "esfolado"):
	print("Casa: Bolton")
elif (B == "turta"):
	print("Casa: Tully")
elif (B != "lobo") or (B != "leao") or (B != "veado") or (B != "dragao") or (B != "rosa") or (B != "lula") or (B != "esfolado") or (B != "turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
